--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,20 @@ body {
 .btn-goto {
   color: #F4FBB2;
   background-color: #565A5F;
+  font-weight: 700; 
+}
+
+h1 {
+  font-size: 50px;
   font-weight: 700;
-  
+  text-shadow: 0px 0px 2px #000000;
+}
+
+h3 {
+  font-weight: 700;
+  text-shadow: 0px 0px 2px #000000;
+}
+
+.light {
+  color: #efefef;
 }
